<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stream</string>
    
    <string name="settings">Settings</string>
    <string name="server_ip">Server IP</string>
    <string name="video_br">Video Bitrate</string>
    <string name="video_fr">Video Framerate</string>
    <string name="audio_br">Audio Bitrate</string>
    <string name="audio_sr">Audio Sampling Rate</string>
    <string name="audio_ch">Audio Channels</string>
    <string name="video_sz_w">Width</string>
    <string name="video_sz_h">Height</string>
    <string name="max_duration">Max Duration</string>
    <string name="max_filesize">Max Filesize</string>
    
    <string name="categories">Categories</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="comments">Comments</string>
    <string name="channel">Channel</string>
    <string name="emailAddress">Email address:</string>
    <string name="emailSubject">Subject:</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="emailSignature">Whatzup bro, check this video.</string>
    <string name="sendMail">Send mail...</string>
    <string name="invalidEmail">Invalid email address</string>
    
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
	<string name="broadcast">Broadcast</string>
	<string name="broadcast_yourself">Broadcast Yourself</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="add">Add</string>
	<string name="author">author:</string>

</resources>
